--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "format-check": "prettier --check '**/*.ts'",
     "lint": "eslint src/**/*.ts",
     "package": "ncc build --source-map --license licenses.txt",
-    "test": "jest",
-    "all": "npm run build && npm run format && npm run lint && npm run package && npm test"
+    "test": "jest --passWithNoTests",
+    "all": "yarn run build && yarn run format && yarn run lint && yarn run package && yarn test"
   },
   "repository": {
     "type": "git",
@@ -25,19 +25,24 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@actions/core": "^1.6.0"
+    "@actions/core": "^1.6.0",
+    "@actions/github": "^5.0.3",
+    "@actions/tool-cache": "^2.0.1",
+    "@octokit/graphql": "^5.0.0",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
-    "@types/node": "^16.10.5",
+    "@types/node": "^18.6.1",
+    "@types/semver": "^7.3.10",
     "@typescript-eslint/parser": "^5.8.1",
-    "@vercel/ncc": "^0.31.1",
-    "eslint": "^7.32.0",
+    "@vercel/ncc": "^0.34.0",
+    "eslint": "^8.20.0",
     "eslint-plugin-github": "^4.3.2",
-    "eslint-plugin-jest": "^25.3.2",
-    "jest": "^27.2.5",
+    "eslint-plugin-jest": "^26.6.0",
+    "jest": "^28.1.3",
     "js-yaml": "^4.1.0",
-    "prettier": "2.5.1",
-    "ts-jest": "^27.1.2",
+    "prettier": "2.7.1",
+    "ts-jest": "^28.0.7",
     "typescript": "^4.4.4"
   }
 }
