--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "typescript-action",
+  "name": "actions-setup",
   "version": "0.0.0",
   "private": true,
-  "description": "TypeScript template action",
   "main": "lib/main.js",
   "scripts": {
     "build": "tsc",
@@ -22,16 +21,16 @@
     "node",
     "setup"
   ],
-  "author": "",
-  "license": "MIT",
+  "author": "Acorn Labs, Inc.",
+  "license": "Apache-2.0",
   "dependencies": {
+    "yarn": "^1.22.19"
+  },
+  "devDependencies": {
     "@actions/core": "^1.6.0",
     "@actions/github": "^5.0.3",
     "@actions/tool-cache": "^2.0.1",
     "@octokit/graphql": "^5.0.0",
-    "yarn": "^1.22.19"
-  },
-  "devDependencies": {
     "@types/node": "^18.6.1",
     "@types/semver": "^7.3.10",
     "@typescript-eslint/parser": "^5.8.1",
