--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@actions/core": "^1.6.0",
+    "@actions/exec": "^1.1.1",
     "@actions/github": "^5.0.3",
     "@actions/tool-cache": "^2.0.1",
     "@octokit/graphql": "^5.0.0",
