--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,7 +21,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: ./
         with:
-          token: ${{secrets.GITHUB_TOKEN}}
+          token: ${{secrets.ACORN_TOKEN}}
       - run: acorn
         shell: bash
 
