--- a/package.json
+++ b/package.json
@@ -29,9 +29,7 @@
   "devDependencies": {
     "@actions/core": "^1.6.0",
     "@actions/exec": "^1.1.1",
-    "@actions/github": "^5.0.3",
     "@actions/tool-cache": "^2.0.1",
-    "@octokit/graphql": "^5.0.0",
     "@types/node": "^18.6.1",
     "@types/semver": "^7.3.10",
     "@typescript-eslint/parser": "^5.8.1",
@@ -41,6 +39,7 @@
     "eslint-plugin-jest": "^26.6.0",
     "jest": "^28.1.3",
     "js-yaml": "^4.1.0",
+    "node-fetch": "^3.2.10",
     "prettier": "2.7.1",
     "ts-jest": "^28.0.7",
     "typescript": "^4.4.4"
